# geo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  README.md  alembic.ini  bot.py  docker-compose.yml  functions.py  handle_userdata.py  pyproject.toml  requirements.txt  show_map.py
.claude/worktrees/feature+ai-thread-extraction/src/pressmuenzen/: config.py
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_baseline.py  0002_ai_extract.py  0003_ai_address_low.py
data/: clean_database.json  telegram_constants.py  url_database.json
scripts/: deploy.sh  import_legacy_json.py
src/pressmuenzen/: __main__.py  config.py  logging.py
src/pressmuenzen/ai/: extract.py  job.py
src/pressmuenzen/bot/: app.py  keyboards.py  texts.py
src/pressmuenzen/bot/handlers/: admin.py  admin_geocode.py  common.py  corrections.py  details.py  search.py  visited.py  watches.py
src/pressmuenzen/db/: engine.py  geo.py  models.py
src/pressmuenzen/db/repositories/: corrections.py  machines.py  users.py
src/pressmuenzen/domain/: gps_parser.py  models.py  name_geocode.py  precedence.py
src/pressmuenzen/scraper/: canary.py  elongated_coin.py  geocoding.py  pipeline.py  source.py
src/pressmuenzen/services/: corrections.py  maps.py  notifications.py  search.py
src/pressmuenzen/web/: app.py
src/pressmuenzen/web/routes/: admin.py  api.py  health.py  map.py
src/pressmuenzen/web/static/: map.css  map.js
src/pressmuenzen/web/templates/: admin.html  diff_map.html  map.html
tests/: conftest.py
tests/fixtures/: gps_strings.json
tests/integration/: test_repositories.py
tests/unit/: test_admin_geocode.py  test_ai_extract.py  test_find_format.py  test_geocode_api.py  test_gps_parser.py  test_map_token.py  test_name_geocode.py  test_precedence.py  test_thread_fetcher.py
