[project]
name = "pressmuenzen"
version = "0.1.0"
description = "Telegram bot, scraper and public web map for elongated-coin (Pressmuenzen) machines."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "python-telegram-bot[ext]>=21.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "geoalchemy2>=0.15",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "geopy>=2.4",
    "folium>=0.16",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "tenacity>=8.4",
    "aiolimiter>=1.1",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "testcontainers[postgres]>=4.5",
    "types-beautifulsoup4",
]

[project.scripts]
pressmuenzen = "pressmuenzen.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pressmuenzen"]

[tool.ruff]
src = ["src", "tests", "scripts"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ASYNC", "BLE", "RUF"]
ignore = [
    "E501",   # line length handled by the formatter
    # German user-facing copy legitimately uses en dashes and unicode punctuation.
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.mypy]
python_version = "3.12"
packages = ["pressmuenzen"]
mypy_path = "src"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["geopy.*", "folium.*", "geoalchemy2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that require a live PostGIS database",
]
